--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale: "en-US"
-title: "KeeWee Solutions Inc."
-title_separator: "-"
+title: "EnviroByte"
+title_separator: "|"
 subtitle: "Sustainability by Analytical Engine"
-name: "KeeWee Solutions"
+name: "EnviroByte"
 description: "Sustainability by Analytical Engine"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: "https://www.envirobyte.com/"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: EnviroByte/EnviroByteWebsite # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -60,7 +60,7 @@ algolia:
   search_only_api_key: # YOUR_SEARCH_ONLY_API_KEY
   powered_by: # true (default), false
 google:
-  search_engine_id: # YOUR_SEARCH_ENGINE_ID
+  search_engine_id: 719b122663e374c2a
   instant_search: # false (default), true
 # SEO Related
 google_site_verification:
@@ -87,7 +87,7 @@ social:
 analytics:
   provider: "google-gtag"
   google:
-    tracking_id:
+    tracking_id: UA-234003508-1
     anonymize_ip: # true, false (default)
 
 # Site Author
